# django-filtered-articles

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  manage.py  requirements-dev.txt  setup.cfg  setup.py
articles/: admin.py  apps.py  models.py  urls.py  views.py
articles/migrations/: 0002_article_markup.py
articles/templates/articles/: article_confirm_delete.html  article_detail.html
articles/tests/: runtests.py  test_model.py  test_settings.py  urls.py
django-filtered-articles/: apps.py  models.py  views.py
django-filtered-articles/migrations/: 0002_article_markup.py  0003_auto_20200522_1414.py
django-filtered-articles/templates/django-filtered-articles/: article_form.html  article_list.html
django-filtered-articles/tests/: runtests.py  settings.py  test_forms.py  test_list_view.py  test_model.py  test_settings.py  test_views.py  urls.py
filtered_articles/: models.py  views.py
filtered_articles/migrations/: 0001_initial.py  0002_article_markup.py  0003_auto_20200522_1414.py
filtered_articles/templates/filtered_articles/: article_form.html
filtered_articles/tests/: runtests.py  settings.py  test_forms.py  test_list_view.py  test_model.py  test_views.py
filtered_articles/tests/templates/: _base.html
